--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -2,3 +2,4 @@
   header { position: static !important; }   /* sidebar scrolls */
   footer { display: none !important; }      /* remove footer line */
 </style>
+<link rel="stylesheet" href="{{ "/assets/css/custom.css" | relative_url }}">
