--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,1 +1,2 @@
 <link rel="stylesheet" href="{{ "/assets/css/custom.css?v=2" | relative_url }}">
+<script src="{{ "/assets/js/script.js" | relative_url }}"></script>
