--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,2 +1,6 @@
-<link rel="stylesheet" href="{{ "/assets/css/custom.css?v=2" | relative_url }}">
-<script src="{{ "/assets/js/script.js" | relative_url }}"></script>
+<link rel="stylesheet" href="{{ '/assets/css/custom.css?v=2' | relative_url }}">
+
+<!-- Other content goes here -->
+
+<script src="{{ '/assets/js/script.js' | relative_url }}"></script>
+</body>
