--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -2,9 +2,6 @@
 
 <!-- Other content goes here -->
 
-<script src="{{ '/assets/js/script.js' | relative_url }}"></script>
-</body>
-
 <!-- SEO Meta Tags -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +9,8 @@
 <meta name="keywords" content="Saif Haider Kayani, materials science, alloys, research, engineering, sustainability">
 <meta name="author" content="Saif Haider Kayani">
 <meta name="robots" content="index, follow">
+
+<!-- Google Site Verification (Place this inside the <head> section) -->
 <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE_HERE">
 
 <!-- Open Graph Meta Tags for Social Media Sharing -->
@@ -20,3 +19,6 @@
 <meta property="og:image" content="/assets/headshot_circle.jpg">
 <meta property="og:url" content="https://saifhaiderkayani.github.io">
 <meta property="og:type" content="website">
+
+<script src="{{ '/assets/js/script.js' | relative_url }}"></script>
+</body>
